// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AcceptedLists shows merge button when multi select and more than 1 list is selected 1`] = `
<div>
  <div
    class="mb-4"
  >
    <div
      class="clearfix"
    >
      <div
        class="mx-auto float-start"
      >
        <div>
          Foo
        </div>
      </div>
      <button
        class="mx-auto float-end btn btn-link"
        type="button"
      >
        Hide
         Select
      </button>
    </div>
    <div
      class="list-group"
    >
      <div
        class="accepted-list list-list-group-item list-group-item"
        data-test-class="incomplete-list"
        data-test-id="list-id3"
      >
        <div
          class="list-item-row row"
        >
          <div
            class="mx-sm-auto col-1"
          >
            <input
              class="multi-select-check"
              type="checkbox"
            />
            <div
              class="list-item-multi-divider"
            />
          </div>
          <div
            class="col-sm-11 col-10"
          >
            <div
              class="ms-1 pt-1 row"
            >
              <div
                class="col-lg-6"
              >
                <a
                  class="router-link"
                  data-discover="true"
                  href="/lists/id3"
                >
                  <h5
                    class="mb-1"
                  >
                    <i
                      class="fa fa-music text-secondary me-3"
                    />
                    baz
                  </h5>
                </a>
              </div>
              <div
                class="list-multi-created-at col-lg-4"
              >
                <small
                  class="text-muted"
                >
                  May 31 2020, 12:00:00 am
                </small>
              </div>
              <div
                class="list-multi-buttons pe-lg-3 col-lg-2"
              >
                <div
                  class="float-end btn-group"
                  role="group"
                >
                  <button
                    class="p-0 me-3 list-button-enabled btn btn-link"
                    data-test-id="incomplete-list-complete"
                    type="button"
                  >
                    <i
                      class="fa fa-check fa-2x text-success"
                    />
                  </button>
                  <button
                    class="p-0 me-3 btn btn-link"
                    data-test-id="incomplete-list-merge"
                    type="button"
                  >
                    <i
                      class="fa fa-compress-alt fa-2x text-warning"
                    />
                  </button>
                  <button
                    class="p-0 btn btn-link"
                    data-test-id="incomplete-list-trash"
                    type="button"
                  >
                    <i
                      class="fa fa-trash fa-2x text-danger"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="accepted-list list-list-group-item list-group-item"
        data-test-class="incomplete-list"
        data-test-id="list-id5"
      >
        <div
          class="list-item-row row"
        >
          <div
            class="mx-sm-auto col-1"
          >
            <input
              class="multi-select-check"
              type="checkbox"
            />
            <div
              class="list-item-multi-divider"
            />
          </div>
          <div
            class="col-sm-11 col-10"
          >
            <div
              class="ms-1 pt-1 row"
            >
              <div
                class="col-lg-6"
              >
                <a
                  class="router-link"
                  data-discover="true"
                  href="/lists/id5"
                >
                  <h5
                    class="mb-1"
                  >
                    <i
                      class="fa fa-list text-secondary me-3"
                    />
                    foobar
                  </h5>
                </a>
              </div>
              <div
                class="list-multi-created-at col-lg-4"
              >
                <small
                  class="text-muted"
                >
                  May 31 2020, 12:00:00 am
                </small>
              </div>
              <div
                class="list-multi-buttons pe-lg-3 col-lg-2"
              >
                <div
                  class="float-end btn-group"
                  role="group"
                >
                  <button
                    class="p-0 me-3 list-button-disabled btn btn-link"
                    data-test-id="incomplete-list-complete"
                    disabled=""
                    type="button"
                  >
                    <i
                      class="fa fa-check fa-2x text-success"
                    />
                  </button>
                  <button
                    class="p-0 me-3 btn btn-link"
                    data-test-id="incomplete-list-merge"
                    type="button"
                  >
                    <i
                      class="fa fa-compress-alt fa-2x text-warning"
                    />
                  </button>
                  <button
                    class="p-0 btn btn-link"
                    data-test-id="incomplete-list-trash"
                    type="button"
                  >
                    <i
                      class="fa fa-trash fa-2x text-danger"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AcceptedLists shows modal to set the new list name for merging and clears 1`] = `
<div>
  <div
    class="mb-4"
  >
    <div
      class="clearfix"
    >
      <div
        class="mx-auto float-start"
      >
        <div>
          Foo
        </div>
      </div>
      <button
        class="mx-auto float-end btn btn-link"
        type="button"
      >
        Hide
         Select
      </button>
    </div>
    <div
      class="list-group"
    >
      <div
        class="accepted-list list-list-group-item list-group-item"
        data-test-class="incomplete-list"
        data-test-id="list-id3"
      >
        <div
          class="list-item-row row"
        >
          <div
            class="mx-sm-auto col-1"
          >
            <input
              class="multi-select-check"
              type="checkbox"
            />
            <div
              class="list-item-multi-divider"
            />
          </div>
          <div
            class="col-sm-11 col-10"
          >
            <div
              class="ms-1 pt-1 row"
            >
              <div
                class="col-lg-6"
              >
                <a
                  class="router-link"
                  data-discover="true"
                  href="/lists/id3"
                >
                  <h5
                    class="mb-1"
                  >
                    <i
                      class="fa fa-music text-secondary me-3"
                    />
                    baz
                  </h5>
                </a>
              </div>
              <div
                class="list-multi-created-at col-lg-4"
              >
                <small
                  class="text-muted"
                >
                  May 31 2020, 12:00:00 am
                </small>
              </div>
              <div
                class="list-multi-buttons pe-lg-3 col-lg-2"
              >
                <div
                  class="float-end btn-group"
                  role="group"
                >
                  <button
                    class="p-0 me-3 list-button-enabled btn btn-link"
                    data-test-id="incomplete-list-complete"
                    type="button"
                  >
                    <i
                      class="fa fa-check fa-2x text-success"
                    />
                  </button>
                  <button
                    class="p-0 me-3 btn btn-link"
                    data-test-id="incomplete-list-merge"
                    type="button"
                  >
                    <i
                      class="fa fa-compress-alt fa-2x text-warning"
                    />
                  </button>
                  <button
                    class="p-0 btn btn-link"
                    data-test-id="incomplete-list-trash"
                    type="button"
                  >
                    <i
                      class="fa fa-trash fa-2x text-danger"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="accepted-list list-list-group-item list-group-item"
        data-test-class="incomplete-list"
        data-test-id="list-id5"
      >
        <div
          class="list-item-row row"
        >
          <div
            class="mx-sm-auto col-1"
          >
            <input
              class="multi-select-check"
              type="checkbox"
            />
            <div
              class="list-item-multi-divider"
            />
          </div>
          <div
            class="col-sm-11 col-10"
          >
            <div
              class="ms-1 pt-1 row"
            >
              <div
                class="col-lg-6"
              >
                <a
                  class="router-link"
                  data-discover="true"
                  href="/lists/id5"
                >
                  <h5
                    class="mb-1"
                  >
                    <i
                      class="fa fa-list text-secondary me-3"
                    />
                    foobar
                  </h5>
                </a>
              </div>
              <div
                class="list-multi-created-at col-lg-4"
              >
                <small
                  class="text-muted"
                >
                  May 31 2020, 12:00:00 am
                </small>
              </div>
              <div
                class="list-multi-buttons pe-lg-3 col-lg-2"
              >
                <div
                  class="float-end btn-group"
                  role="group"
                >
                  <button
                    class="p-0 me-3 list-button-disabled btn btn-link"
                    data-test-id="incomplete-list-complete"
                    disabled=""
                    type="button"
                  >
                    <i
                      class="fa fa-check fa-2x text-success"
                    />
                  </button>
                  <button
                    class="p-0 me-3 btn btn-link"
                    data-test-id="incomplete-list-merge"
                    type="button"
                  >
                    <i
                      class="fa fa-compress-alt fa-2x text-warning"
                    />
                  </button>
                  <button
                    class="p-0 btn btn-link"
                    data-test-id="incomplete-list-trash"
                    type="button"
                  >
                    <i
                      class="fa fa-trash fa-2x text-danger"
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="modal show"
      role="dialog"
    >
      <div
        class="modal-header"
      >
        <button
          aria-label="Close"
          type="button"
        />
        <h5
          class="modal-title"
        >
          Merge 
          "baz"
        </h5>
      </div>
      <div
        class="modal-body"
      >
        <form
          class=""
        >
          <div
            class="mb-3"
          >
            <label
              class="form-label"
              for="mergeName"
            >
              Name for the merged list
            </label>
            <input
              class="form-control"
              id="mergeName"
              name="mergeName"
              placeholder="My super cool list"
              type="text"
              value=""
            />
          </div>
        </form>
      </div>
      <div
        class="modal-footer"
      >
        <button
          class="btn btn-secondary"
          data-test-id="clear-merge"
          type="button"
        >
          Close
        </button>
        <button
          class="merge-modal-confirm-disabled btn btn-primary"
          data-test-id="confirm-merge"
          disabled=""
          type="button"
        >
          Merge lists
        </button>
      </div>
    </div>
  </div>
</div>
`;
